# naba

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DRIFT-CHECK.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  VOICE.md  build.rs  go.mod  go.sum  install.py  install.sh  skills_embed.go  skills_embed_test.go
tests/parity/: .gitignore  README.md  check_traceability.py  conftest.py  pyproject.toml  test_harness.py  test_json_envelope.py  test_mcp.py  test_parity.py  traceability_exemptions.yaml
tests/parity/cases/: README.md  config.yaml  diagram.yaml  doctor.yaml  edit.yaml  exit_codes.yaml  generate.yaml  icon.yaml  inventory.yaml  json_shapes.yaml  mcp.yaml  pattern.yaml  precedence.yaml  provider.yaml  restore.yaml  skills.yaml  story.yaml  version.yaml
tests/parity/golden/config-get-unset/: stderr.txt
tests/parity/golden/config-set/: stdout.txt
tests/parity/golden/config-set-then-get/: stdout.txt
tests/parity/golden/config-set-unknown-key/: stderr.txt
tests/parity/golden/diagram-basic/: request.json  stderr.txt  stdout.txt
tests/parity/golden/diagram-full/: request.json  stdout.txt
tests/parity/golden/doctor-green/: stdout.txt
tests/parity/golden/doctor-human-format/: stdout.txt
tests/parity/golden/doctor-no-key/: stdout.txt
tests/parity/golden/edit-basic/: request.json  stderr.txt  stdout.txt
tests/parity/golden/edit-imageconfig/: request.json  stdout.txt
tests/parity/golden/edit-missing-file/: stderr.txt
tests/parity/golden/exit-http-401-auth/: stderr.txt
tests/parity/golden/exit-http-429-ratelimit/: stderr.txt
tests/parity/golden/exit-http-500-api/: stderr.txt
tests/parity/golden/exit-invalid-aspect/: stderr.txt
tests/parity/golden/exit-invalid-quality-config/: stderr.txt
tests/parity/golden/exit-invalid-quality-flag/: stderr.txt
tests/parity/golden/exit-invalid-resolution/: stderr.txt
tests/parity/golden/exit-missing-api-key/: stderr.txt
tests/parity/golden/exit-model-without-provider/: stderr.txt
tests/parity/golden/exit-unknown-config-key/: stderr.txt
tests/parity/golden/generate-basic/: stdout.txt
tests/parity/golden/generate-count-two/: request.json  stderr.txt
tests/parity/golden/generate-global-flags/: request.json  stdout.txt
tests/parity/golden/generate-imageconfig/: request.json  stdout.txt
tests/parity/golden/generate-pty-human/: stdout.txt
tests/parity/golden/generate-style-variations/: request.json  stderr.txt  stdout.txt
tests/parity/golden/icon-background-corners/: request.json  stdout.txt
tests/parity/golden/icon-basic/: request.json  stderr.txt  stdout.txt
tests/parity/golden/icon-format-jpeg/: stderr.txt  stdout.txt
tests/parity/golden/icon-multisize/: request.json  stderr.txt  stdout.txt
tests/parity/golden/json-array-multi/: stdout.txt
tests/parity/golden/json-story-always-array/: stdout.txt
tests/parity/golden/mcp/: tools.json
tests/parity/golden/models-bedrock-profile-creds-json/: stdout.txt
tests/parity/golden/models-list-json/: stdout.txt
tests/parity/golden/pattern-basic/: request.json  stderr.txt  stdout.txt
tests/parity/golden/pattern-full/: request.json  stdout.txt
tests/parity/golden/pattern-mirror/: request.json  stdout.txt
tests/parity/golden/prec-apikey-config-fallback/: request.json
tests/parity/golden/prec-apikey-env-over-config/: request.json
tests/parity/golden/prec-apikey-inline-over-env/: request.json
tests/parity/golden/prec-config-model/: request.json
tests/parity/golden/prec-config-quality/: request.json
tests/parity/golden/prec-imageconfig-config-only/: request.json
tests/parity/golden/prec-imageconfig-flag-over-config/: request.json  stderr.txt
tests/parity/golden/prec-model-over-quality/: request.json
tests/parity/golden/prec-openrouter-quality-native/: request.json
tests/parity/golden/prec-quality-fast-gemini-flash/: request.json
tests/parity/golden/provider-bedrock-profile-creds-json/: stdout.txt
tests/parity/golden/provider-list-human/: stdout.txt
tests/parity/golden/provider-list-json/: stdout.txt
tests/parity/golden/restore-no-prompt/: request.json  stderr.txt  stdout.txt
tests/parity/golden/restore-with-prompt/: request.json  stdout.txt
tests/parity/golden/skills-install-dry-run/: stdout.txt
tests/parity/golden/skills-install-json/: stdout.txt
tests/parity/harness/: __init__.py  mock_provider.py  normalize.py  pty_runner.py  runner.py
(+325 files in other folders)
